--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@ layout: default
 
 <div class="home">
   {% assign post = site.posts.first %}
-  <h3>Latest Episode</h3>
+  <h3>This Week's Episode</h3>
   {% include short_post.html %}
+  <h3>More Episodes</h3>
+  {% for post in site.posts offset: 1 limit: 5 %}
+  {% include tiny_post.html %}
+  {% endfor %}
 </div>
+
