--- a/pizza/index.html
+++ b/pizza/index.html
@@ -40,7 +40,7 @@ title: "Beats, Rye &amp; Types: The Pizza Book"
 
     <p>Aaron Quint and Michael Bernstein have made hundreds of pizza pies all over the world and have shared this recipe successfully with many of their friends. The contents of this book are designed by home cooks for home cooks and the results are spectacular. Don't live another minute without <em>The Pizza Book</em> in your life.</p>
     <p>Sure, there are lots of pizza books and recipes out there, but none this <em>dope</em>*.</p>
-    <p>Listen to us wax poetic about making pizza on our podcast, <a href="http://beatsryetypes.com">Beats, Rye & Types </a></p>
+    <p>Listen to us wax poetic about making pizza on our podcast, <a href="http://beatsryetypes.com">Beats, Rye & Types</a>.</p>
     <iframe width="100%" height="166" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/226213524&amp;color=ff5500&amp;show_artwork=false&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=false&amp;show_reposts=false"></iframe>
     <p></p> 
     <p><small>*Actual fact.</small></p>
