--- a/pizza/index.html
+++ b/pizza/index.html
@@ -27,7 +27,7 @@ title: "Beats, Rye &amp; Types: The Pizza Book"
       <img src="images/author-names.gif" alt="By Aaron Quint and Michael Bernstein" />
     </div>
     <div class="preorder">
-      <a href="">
+      <a href="https://www.kickstarter.com/projects/980466739/the-pizza-book">
         <img src="images/preorder-button.gif" alt="PREORDER ON KICKSTARTER" />
       </a>
     </div>
@@ -36,7 +36,7 @@ title: "Beats, Rye &amp; Types: The Pizza Book"
 
     <p><em>The Pizza Book</em> is what happens when two friends who have pursued at-home pizza perfection for nearly a decade decide that, like pizza itself, their knowledge was too good to keep to themselves. That excitement and knowledge has been captured in a full-color real-deal professionally designed cookbook that delivers their dedication to delicious pies in potent, beautiful form.</p>
 
-    <p><a href="">Pre-order <em>The Pizza Book</em> on Kickstarter</a> and get the master dough recipe, dozens of ideas for individual pies, full menus with side dishes and drink pairings, a glossary of potential pizza toppings, dough science and more!</p>
+    <p><a href="https://www.kickstarter.com/projects/980466739/the-pizza-book">Pre-order <em>The Pizza Book</em> on Kickstarter</a> and get the master dough recipe, dozens of ideas for individual pies, full menus with side dishes and drink pairings, a glossary of potential pizza toppings, dough science and more!</p>
 
     <p>Aaron Quint and Michael Bernstein have made hundreds of pizza pies all over the world and have shared this recipe successfully with many of their friends. The contents of this book are designed by home cooks for home cooks and the results are spectacular. Don't live another minute without <em>The Pizza Book</em> in your life.</p>
     <p>Sure, there are lots of pizza books and recipes out there, but none this <em>dope</em>*.</p>
