--- a/pizza/index.html
+++ b/pizza/index.html
@@ -11,7 +11,12 @@ title: "Beats, Rye &amp; Types: The Pizza Book"
 
 <title>The Pizza Book: By Aaron Quint & Michael Bernstein. Preorder Now.</title>
 <meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
-
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@thepizzabook">
+<meta name="twitter:creator" content="@beatsryetypes">
+<meta name="twitter:title" content="Support The Pizza Book on Kickstarter Now">
+<meta name="twitter:description" content="The Pizza Book' is what happens when two friends who have pursued at-home pizza perfection for nearly a decade decide that, like pizza itself, their knowledge was too good to keep to themselves. That excitement and knowledge has been captured in a full-color real-deal professionally designed cookbook that delivers their dedication to delicious pies in potent, beautiful form.">
+<meta name="twitter:image" content="http://beatsryetypes.com/pizza/images/twitter-cover.jpg">
 <link rel="stylesheet" href="/css/pizza.css">
 <link rel="shortcut icon" type="image/png" href="/images/brt-favicon.png">
 </head>
