--- a/pizza/index.html
+++ b/pizza/index.html
@@ -15,9 +15,14 @@ title: "Beats, Rye &amp; Types: The Pizza Book"
 <meta name="twitter:site" content="@thepizzabook">
 <meta name="twitter:creator" content="@beatsryetypes">
 <meta name="twitter:title" content="Support The Pizza Book on Kickstarter Now">
-<meta name="twitter:description" content="The Pizza Book' is what happens when two friends who have pursued at-home pizza perfection for nearly a decade decide that, like pizza itself, their knowledge was too good to keep to themselves. That excitement and knowledge has been captured in a full-color real-deal professionally designed cookbook that delivers their dedication to delicious pies in potent, beautiful form.">
-<meta name="twitter:image" content="http://beatsryetypes.com/pizza/images/header-large.jpg">
+<meta name="twitter:description" content="'The Pizza Book' is what happens when two friends who have pursued at-home pizza perfection for nearly a decade decide that, like pizza itself, their knowledge was too good to keep to themselves. That excitement and knowledge has been captured in a full-color real-deal professionally designed cookbook that delivers their dedication to delicious pies in potent, beautiful form.">
+<meta name="twitter:image" content="http://beatsryetypes.com/pizza/images/header-large-twitter.jpg">
 <link rel="stylesheet" href="/css/pizza.css">
+<meta property="og:url"                content="http://beatsryetypes.com/pizza/" />
+<meta property="og:type"               content="website" />
+<meta property="og:title"              content="Support The Pizza Book on Kickstarter Now" />
+<meta property="og:description"        content="'The Pizza Book' is what happens when two friends who have pursued at-home pizza perfection for nearly a decade decide that, like pizza itself, their knowledge was too good to keep to themselves. That excitement and knowledge has been captured in a full-color real-deal professionally designed cookbook that delivers their dedication to delicious pies in potent, beautiful form." />
+<meta property="og:image"              content="http://beatsryetypes.com/pizza/images/header-large-twitter.jpg"/>
 <link rel="shortcut icon" type="image/png" href="/images/brt-favicon.png">
 </head>
 <body>
