--- a/pizza/index.html
+++ b/pizza/index.html
@@ -1,6 +1,8 @@
 ---
 layout: 
 title: "Beats, Rye &amp; Types: The Pizza Book"
+redirect_to:
+  - http://pizza.beatsryetypes.com
 ---
 <!DOCTYPE html>
 <html>
